--- a/Company.Module.Shared/Company.Module.Shared.csproj
+++ b/Company.Module.Shared/Company.Module.Shared.csproj
@@ -75,6 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTO\PatientDTO.cs" />
+    <Compile Include="DTO\TestResultDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
