--- a/Company.Module.Application/Company.Module.Application.csproj
+++ b/Company.Module.Application/Company.Module.Application.csproj
@@ -81,7 +81,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AggregateRootServices\IPatientService.cs" />
+    <Compile Include="AggregateRootServices\ITestResultService.cs" />
     <Compile Include="AggregateRootServices\PatientService.cs" />
+    <Compile Include="AggregateRootServices\TestResultService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
