Moved over to NUnit from MSTest
Test still failing, one project refuses to load.

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="../Company.Module.Application.Tests/packages.config" />
+  <repository path="../Company.Module.Application/packages.config" />
+  <repository path="../Company.Module.Repositories.Tests/packages.config" />
+  <repository path="../Company.Module.Repositories/packages.config" />
+  <repository path="../Company.Module.Web.Host/packages.config" />
   <repository path="..\Company.Module.Application.Tests\packages.config" />
   <repository path="..\Company.Module.Application\packages.config" />
   <repository path="..\Company.Module.Repositories.Tests\packages.config" />
