--- a/Company.Module.Application.Tests/Company.Module.Application.Tests.csproj
+++ b/Company.Module.Application.Tests/Company.Module.Application.Tests.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -43,13 +43,20 @@
     <CodeContractsShowSquigglies>True</CodeContractsShowSquigglies>
     <CodeContractsUseBaseLine>False</CodeContractsUseBaseLine>
     <CodeContractsEmitXMLDocs>False</CodeContractsEmitXMLDocs>
-    <CodeContractsCustomRewriterAssembly />
-    <CodeContractsCustomRewriterClass />
-    <CodeContractsLibPaths />
-    <CodeContractsExtraRewriteOptions />
-    <CodeContractsExtraAnalysisOptions />
-    <CodeContractsSQLServerOption />
-    <CodeContractsBaseLineFile />
+    <CodeContractsCustomRewriterAssembly>
+    </CodeContractsCustomRewriterAssembly>
+    <CodeContractsCustomRewriterClass>
+    </CodeContractsCustomRewriterClass>
+    <CodeContractsLibPaths>
+    </CodeContractsLibPaths>
+    <CodeContractsExtraRewriteOptions>
+    </CodeContractsExtraRewriteOptions>
+    <CodeContractsExtraAnalysisOptions>
+    </CodeContractsExtraAnalysisOptions>
+    <CodeContractsSQLServerOption>
+    </CodeContractsSQLServerOption>
+    <CodeContractsBaseLineFile>
+    </CodeContractsBaseLineFile>
     <CodeContractsCacheAnalysisResults>True</CodeContractsCacheAnalysisResults>
     <CodeContractsFailBuildOnWarnings>False</CodeContractsFailBuildOnWarnings>
     <CodeContractsRuntimeCheckingLevel>Full</CodeContractsRuntimeCheckingLevel>
@@ -68,12 +75,14 @@
     <Reference Include="AutoMapper">
       <HintPath>..\packages\AutoMapper.3.2.1\lib\net40\AutoMapper.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Rhino.Mocks">
       <HintPath>..\packages\RhinoMocks.3.6.1\lib\net\Rhino.Mocks.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AggregateRootServices\PatientServiceTest.cs" />
@@ -85,7 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Company.Module.Application\Company.Module.Application.csproj">
-      <Project>{ed96fef7-9f08-4fec-ae43-3311d283d97e}</Project>
+      <Project>{ED96FEF7-9F08-4FEC-AE43-3311D283D97E}</Project>
       <Name>Company.Module.Application</Name>
     </ProjectReference>
     <ProjectReference Include="..\Company.Module.Domain\Company.Module.Domain.csproj">
@@ -93,11 +102,11 @@
       <Name>Company.Module.Domain</Name>
     </ProjectReference>
     <ProjectReference Include="..\Company.Module.Repositories\Company.Module.Repositories.csproj">
-      <Project>{4c908b9a-d1a4-4167-a440-583629fa7de2}</Project>
+      <Project>{4C908B9A-D1A4-4167-A440-583629FA7DE2}</Project>
       <Name>Company.Module.Repositories</Name>
     </ProjectReference>
     <ProjectReference Include="..\Company.Module.Shared\Company.Module.Shared.csproj">
-      <Project>{f39c092a-ee09-4018-adbe-2276daced272}</Project>
+      <Project>{F39C092A-EE09-4018-ADBE-2276DACED272}</Project>
       <Name>Company.Module.Shared</Name>
     </ProjectReference>
   </ItemGroup>
