WIP : testable repos
Paired with Tony, need to pull.

--- a/Company.Module.Repositories.Tests/Company.Module.Repositories.Tests.csproj
+++ b/Company.Module.Repositories.Tests/Company.Module.Repositories.Tests.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FakeDbSet.cs" />
+    <Compile Include="FakeObjectSet.cs" />
     <Compile Include="FakePatients.cs" />
     <Compile Include="PatientRepositoryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
