--- a/Company.Module.Web.Host/Company.Module.Web.Host.csproj
+++ b/Company.Module.Web.Host/Company.Module.Web.Host.csproj
@@ -87,6 +87,9 @@
     <Reference Include="StructureMap.Net4">
       <HintPath>..\packages\structuremap.3.1.1.134\lib\net40\StructureMap.Net4.dll</HintPath>
     </Reference>
+    <Reference Include="StructureMap.Web">
+      <HintPath>..\packages\structuremap.web.3.1.0.133\lib\net40\StructureMap.Web.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
